--- a/css/admin.css
+++ b/css/admin.css
@@ -55,3 +55,44 @@ p {
 .italic {
 	font-style: italic;
 }
+
+/* Global style */
+.smaller {
+	font-size: 13px;
+}
+
+#modalCheck{
+	display: none;
+}
+.Modal{
+	display: none;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+#modalCheck:checked + .Modal, #modalContent:target{
+	display: block;
+}
+.popup_block{
+	position: absolute;
+	left: 50%;
+	z-index: 9999;
+	height: auto;
+	margin-left: -40%;
+	width: 80%;
+	background-color: white;
+	padding: 1.25em;
+	border: solid 1px #666666;
+	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+	top: 100px;
+	color: #333;
+}
+img.btn_close {
+	float: right;
+	margin: -55px -55px 0 0;
+	cursor: pointer;
+}
