--- a/css/style.css
+++ b/css/style.css
@@ -3,42 +3,10 @@
 body {
 	width: 100%;
 	height: 100%;
-}
-@media only screen {
-	body {
-		background-image: url("../img/large-bg2.png");
-		background-repeat: no-repeat;
-		background-color: #34495e;
-		background-attachment: fixed;
-		background-size: cover;
-	}
-}
-@media only screen and (min-width: 768px) {
-	body {
-		background-image: url("../img/small-bg2.png");
-		background-repeat: no-repeat;
-		background-color: #34495e;
-		background-attachment: fixed;
-		background-size: contain;
-	}
-}
-@media only screen and (min-width: 1280px) {
-	body {
-		background-image: url("../img/medium-bg2.png");
-		background-repeat: no-repeat;
-		background-color: #34495e;
-		background-attachment: fixed;
-		background-size: cover;
-	}
-}
-@media only screen and (min-width: 1440px) {
-	body {
-		background-image: url("../img/large-bg2.png");
-		background-repeat: no-repeat;
-		background-color: #34495e;
-		background-attachment: fixed;
-		background-size: cover;
-	}
+	background-repeat: no-repeat;
+	background-color: #34495e;
+	background-attachment: fixed;
+	background-size: cover;
 }
 
 /* @override Foundation */
@@ -137,8 +105,11 @@ img.btn_close {
 
 .center {
 	display: block;
+	margin: 0;
 	text-align: center;
-	margin: auto;
+}
+.bold {
+	font-weight: bold;
 }
 .italic {
 	font-style: italic;
