--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 	height: 100%;
 	background-repeat: no-repeat;
 	background-color: #34495e;
+	background-image: url('../img/large-bg3.png');
 	background-attachment: fixed;
 	background-size: cover;
 }
